--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "express": "^4.21.2",
     "groq-sdk": "^0.9.1",
     "nodemon": "^3.1.9",
+    "path": "^0.12.7",
     "ts-node": "^10.9.2"
   }
 }
