--- a/public/manifest.json
+++ b/public/manifest.json
@@ -4,7 +4,7 @@
 "start_url":"/",
 "background_color":"#a8ddf0",
 "theme_color":"#a8ddf0",
-"display":"fullscreen",
+"display":"standalone",
 "orientation":"any",
 "icons":[
 {
